--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <button data-key="=">=</button>
       <button data-key="+">+</button>
       <button data-key="C">C</button>
+      <button data-key="%">%</button>
     </div>
   </div>
   <script src="script.js"></script>
